# ai_agent

./: README.md  main.py  pyproject.toml
1-fewshot-prompting/: main.py
2-multi-step-multi-model/: generated_x_post.txt  main.py  pyproject.toml
3-structured-output/: main.py  pyproject.toml  requirements.txt
4-structured-outputs-pydantic/: invoices.db  main.py  pyproject.toml  requirements.txt
5-generating-images/: main.py  pyproject.toml
6-litellm-proxy/: README.md  image_classification_litellm_sagemaker.py  litellm.config.yaml  pyproject.toml  requirements.txt  track_cost_callback.py  tracking_log_helicone.py  tracking_log_langfuse.py  tracking_log_lunary.py
xx-crewai/: main.py  pyproject.toml
xx-crewai/research_crew/: pyproject.toml
